# somegames

./: .gitignore  CMakeLists.txt  README.md  default.nix  reflectcpp.nix  run.sh
.github/workflows/: main.yml
app/: debug.cpp  main.cpp
include/somegames/: somegames.hpp
include/somegames/App/: App.hpp  Cli.hpp  Gui.hpp
include/somegames/Bot/: Bot.hpp  Human.hpp  Montecarlo.hpp  Random.hpp
include/somegames/Export/: Export.hpp  Json.hpp  Txt.hpp
include/somegames/Game/: Connectfour.hpp  Game.hpp  Gomoku.hpp  Reversi.hpp  Tictactoe.hpp
src/App/: App.cpp  Cli.cpp  Gui.cpp
src/Bot/: Bot.cpp  Human.cpp  Montecarlo.cpp  Random.cpp
src/Export/: Export.cpp  Json.cpp  Txt.cpp
src/Game/: Connectfour.cpp  Game.cpp  Reversi.cpp  Tictactoe.cpp
test/: Connectfour-test.cpp  Gomoku-test.cpp  Reversi-test.cpp  Tictactoe-test.cpp
web/: CMakeLists.txt  build.sh  package.sh  serve.sh  shell.nix
web/binding/: binding.cpp
web/static/: index.html  somegames-app.js  style.css
